# api-development

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 561ed0dd8e16_add_foregin_key_to_post_table.py  87188c5fa227_add_pending_columns_to_posts_table.py  953ccfb7217c_create_posts_table.py  b4d0cc0155ea_add_phone_number_to_user_table.py  bd9194340c1c_add_pending_votes_table.py  cafffbd90cdf_add_user_table.py  ee8fb6a5a5d8_add_content_column_to_posts.py  f4dafdea02df_add_phone_number_to_user_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: test_calculations.py
