[tool.poetry]
name = "api-development"
version = "0.1.0"
description = ""
authors = ["Navaneeth Reddy Alavala <navaneethreddydevops@gmail.com>"]
readme = "README.md"
repository = "https://github.com/navaneethreddydevops/api-development.git"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.110.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
