[tool.poetry]
name = "api-development"
version = "0.1.0"
description = ""
authors = ["Navaneeth Reddy Alavala <navaneethreddydevops@gmail.com>"]
readme = "README.md"
repository = "https://github.com/navaneethreddydevops/api-development.git"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
SQLAlchemy = "2.0.29"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.3.3"
alembic = "^1.13.1"
pytest = "^8.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
